# kart

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTORS  Makefile  README.md  run_clang_format.sh
include/: curve.h  data.h  path.h  point.h  runner.h  sdl.h  utils.h  vector.h
src/: curve.c  data.c  main.c  path.c  point.c  runner.c  sdl.c  utils.c  vector.c
